css/style.css
/* ... */
@media (orientation: portrait) and (min-width: 1024px){
    header h1{
        top: 150px;
        width: 50vw;
    }
    @keyframes typing {
        from { width: 0 }
        to { width: 50vw }
      }
    header h2{
        top: 220px;
        width: 40vw;
    }
}
@media (orientation: landscape) and (min-width: 1366px) {
    header h1{
        top: 130px;
        width: 37vw;
    }
    @keyframes typing {
        from { width: 0 }
        to { width: 37vw }
      }
    header h2{
        top: 200px;
        width: 30vw;
    }
}
@media (orientation: landscape) and (min-width: 1600px) {
    header h1{
        top: 230px;
        width: 500px;
    }
    @keyframes typing {
        from { width: 0 }
        to { width: 500px }
      }
    header h2{
        top: 330px;
        width: 350px;
    }
}
/* MAIN */
/* about me */
section.aboutMe{
    width: 90vw;
    margin: 0 auto;
    padding-top: 70px;
    max-width: 1200px;
}
section.aboutMe p{
    text-align: center;
    font-weight: bold;
}
section.aboutMe h2{
    text-align: center;
    margin: 30px auto;
    text-transform: uppercase;
}
div.hobby {
    display: flex;
    flex-direction: column;
    height: 1400px;
    margin-bottom: 20px;
}
div.hobby>div.hobbyDescription{
    margin: 0 auto 20px auto;
    display: flex;
    width: 100%;
    flex-wrap: wrap;
    justify-content: center;
    height: 400px;
}
div.hobby h3{
    text-align: center;
    width: 100%;
    margin: 10px 0 10px 0;
}
div.hobby > div.hobbyDescription > div.hobbyImage{
    width: 80%;
    background-size: cover;
    border-radius: 20px;
    height: 200px;
}
div.hobby div.millingImage{
    background-image: url("../img/milling.jpg");   
}
div.hobby div.bowlingImage{
    background-image: url("../img/bowling.jpg");
}
div.hobby div.gamesImage{
    background-image: url("../img/games.jpg");
}
div.hobby p{
    display: flex;
    align-items: center
}
div.skills{
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 50px 1fr 1fr 1fr 1fr;
    justify-items: center;
    align-items: center;
}
#mySkills{
    grid-column-end: span 2;
    margin: 30px auto;
}
div.skills p{
    margin: 15px;
    text-transform: uppercase;
}
@media (orientation: landscape) {
    div.hobby{
        height: 1000px;
    }
    div.hobby h3{
        margin: 30px 0 30px 0;
    }
    div.hobby > div.hobbyDescription{
        flex-wrap: nowrap;
        justify-content: space-around;
        align-items: center;
        height: 500px;
    }
    div.hobby>div.hobbyDescription>div{
        width: 280px;
    }
    div.hobby p{
        width: 280px;
    }
}
@media (orientation: landscape) and (min-width: 1024px){
    section.aboutMe{
        width: 80vw;
    }
    div.hobby{
        height: 1500px;
    }
    div.hobby > div.hobbyDescription{
        height: 350px;
    }
    div.hobby>div.hobbyDescription>div.hobbyImage{
        width: 400px;
        height: 300px;
    }
    div.hobby p{
        width: 300px;
    }
}
@media (orientation: portrait) and (min-width: 768px){
    div.hobby{
        height: 1700px;
    }
    div.hobby>div.hobbyDescription{
        height: 500px;
    }
    div.hobby>div.hobbyDescription>div.hobbyImage{
        height: 300px;
    }
}
@media (orientation: portrait) and (min-width: 1024px){
    div.hobby{
        height: 1900px;
    }
    div.hobby>div.hobbyDescription{
        height: 600px;
    }
    div.hobby>div.hobbyDescription>div.hobbyImage{
        height: 400px;
    }
}
@media (orientation: landscape) and (min-width: 1366px) {
    section.aboutMe{
        width: 80vw;
    }
    div.hobby > div.hobbyDescription{
        height: 350px;
    }
    div.hobby>div.hobbyDescription>div.hobbyImage{
        width: 500px;
        height: 300px;
    }
    div.hobby p{
        width: 400px;
    }
}
@media (orientation: landscape) and (min-width: 1600px) {
    section.aboutMe{
        width: 60vw;
    }
    div.hobby > div.hobbyDescription{
        height: 350px;
    }
    div.hobby>div.hobbyDescription>div.hobbyImage{
        width: 500px;
        height: 300px;
    }
    div.hobby p{
        width: 400px;
    }
} 

/* portfolio */
section.portfolio{
    padding-top: 90px;
    height: 1550px;
    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 7%, rgba(89,138,149,1) 100%);
    text-align: center;
    display: flex;
    flex-direction: column;;
}
section.portfolio h2{
    text-align: center;
    text-transform: uppercase;
    margin-bottom: 30px;
}
section.portfolio h3{
    text-align: center;
    width: 100%;
    margin: 10px 0 10px 0;
}
section.portfolio> div.projectDescription{
    margin: 0 auto 20px auto;
    display: flex;
    width: 100%;
    flex-wrap: wrap;
    justify-content: center;
    height: 400px;
    max-width: 1200px;
}
section.portfolio> div.projectDescription> div.projectImage{
    width: 80%;
    background-size: cover;
    border-radius: 20px;
    height: 200px;
}
section.portfolio div.shoppingPageImage{
    background-image: url("../img/shoppingPage.jpg");   
}
section.portfolio div.musicPageImage{
    background-image: url("../img/artist.jpg");   
}
section.portfolio div.photographerPageImage{
    background-image: url("../img/photographer.jpg");   
}
section.portfolio p{
    text-align: center;
    margin: 15px;
}
section.portfolio a{
    text-decoration: none;
    color: black;
}

@media (orientation: landscape) {
    section.portfolio{
        height: 1100px;
    }
    section.portfolio div.projectDescription{
        height: 250px;
        flex-wrap: nowrap;
        justify-content: space-around;
        align-items: center;
    }
    section.portfolio > div.projectDescription > div.projectImage{
        width: 250px;
    }
    section.portfolio p{
        width: 250px;
    }
}
@media (orientation: landscape) and (min-width: 731px){
    section.portfolio > div.projectDescription > div.projectImage{
        width: 300px;
    }
    section.portfolio p{
        width: 300px;
    }
}
/* ... */

